--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
       {
         "source": "/(.*)",
         "destination": "/index.html"
+      },
+      {
+        "source": "/api/scrape",
+        "destination": "http://34.56.151.232:3000/scrape"
       }
     ]
   }
