--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,22 @@
-{
+  {
     "rewrites": [
       {
         "source": "/(.*)",
         "destination": "/index.html"
       },
-      {
+      { 
         "source": "/api/scrape",
         "destination": "http://34.56.151.232:3000/scrape"
+      }
+    ],
+    "headers": [
+      {
+        "source": "/api/(.*)",
+        "headers": [
+          { "key": "Access-Control-Allow-Origin", "value": "*" },
+          { "key": "Access-Control-Allow-Methods", "value": "GET,POST,PUT,DELETE,OPTIONS" },
+          { "key": "Access-Control-Allow-Headers", "value": "X-Requested-With, Content-Type, Accept" }
+        ]
       }
     ]
   }
